# Diplom_res_table

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
reservation/: admin.py  forms.py  models.py  urls.py  views.py
reservation/migrations/: 0001_initial.py  0002_initial.py
reservation/templates/reservation/: about.html  contacts.html  history.html  home.html  main.html  mission.html  personal_account.html  reservation_add.html  reservation_confirm_delete.html  reservation_list.html  services.html  team.html
reservation/templates/reservation/includes/: inc_footer.html  inc_header.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: cmu.py  csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: user_form.html  user_password_reset.html  user_password_set_new.html
